# document-recognizer

./: CMakeLists.txt  README.md  main.cpp
cmake/: cxxflags.cmake
documents/: CMakeLists.txt  page_image.cpp  page_image.hpp  passport.hpp
gui/: CMakeLists.txt  control_widget.cpp  control_widget.hpp  cv_image_widget.cpp  image_widget.cpp  image_widget.hpp  main_window.cpp  main_window.hpp  main_window.ui
images/: CMakeLists.txt  cv_image.hpp  image_processor.cpp  image_processor.hpp  recognizable_object.cpp  recognizable_object.hpp
model/: CMakeLists.txt  document_recognizer_model.cpp  document_recognizer_model.hpp
